# SayCan_experimental

./: .gitignore  .gitmodules  README.md
config/: README.md
docker/: 99-realsense-libusb.rules  Dockerfile  build_docker.sh  into_docker.sh  run_docker.sh
modules/examples/: segment_anything.py
modules/vild/: __init__.py  implement.py  vild_viz.py
ros_ws/src/alpaca_bringup/: CMakeLists.txt  package.xml
ros_ws/src/alpaca_bringup/action/: MovePoints.action
ros_ws/src/alpaca_bringup/configs/: rviz.rviz
ros_ws/src/alpaca_bringup/launch/: bringup.launch  fake_robot.launch  realsense.launch  robot_driver.launch
ros_ws/src/alpaca_bringup/scripts/: alpaca_control_node.py
ros_ws/src/alpaca_connector/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/alpaca_connector/alpaca_connector/: __init__.py  ros_connector.py  ros_types.py
ros_ws/src/alpaca_connector/examples/: control_gripper.py  follow_trajectory.py  monitoring.py  realsense.py
ros_ws/src/alpaca_move/: CMakeLists.txt  package.xml
ros_ws/src/alpaca_move/action/: MovePoints.action
ros_ws/src/alpaca_move/scripts/: alpaca_control_node.py
ros_ws/src/alpaca_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros_ws/src/picker/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/picker/scripts/: classes.py  (+7 more)
ros_ws/src/tf_broadcaster/: CMakeLists.txt  package.xml
saycan/: cliport_demo.py  defines.py  demo.py  gpt3.py  gripper.py  gymenv.py  main.py  model.py  oracle.py  saycan_demo.py  vild_main.py  vild_prompt.py  vild_viz.py
saycan_py/: cliport.py  gym_env.py  vild.py  vild_viz.py
(+22 files in other folders)
