<?xml version="1.0"?>
<package format="2">
  <name>alpaca_bringup</name>
  <version>0.0.1</version>
  <description>Contains scripts for starting Alpaca project</description>

  <maintainer email="yar21sav@gmail.com">Yaroslav Savelev</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>

</package>
